--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My TODO List</title>
+    <meta charset="utf-8">
+    <title>TO-DO List</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="page-header">TODO List</h1>
+
+      <h1 class="page-header">Easily Manage Your Tasks!</h1>
 
       <form class="task-form">
-        <input class="task-input" type="text" id="userinput" placeholder="Enter Task">
+        <input class="task-input" type="text" id="userinput" placeholder="Enter task">
         <button class="input-btn btn" type="submit">Add Task</button>
       </form>
 
       <div class="filter-wrapper">
-        <input class="filter-tasks" type="text" name="filter" id="filter" placeholder="Filter Tasks">
-        <button class="clear-filter-btn btn" type="button">Clear</button>
+        <input class="filter-tasks" type="text" name="filter" id="filter" placeholder="Filter tasks">
+        <button class="clear-filter-btn" type="button">Clear</button>
       </div>
+
       <ul class="task-list">
         <!-- <li class="task-list-item">
           <span class="task-content">Notebook</span>
-          <button class="delete-btn btn" aria-label="Delete Task"></button>
+          <button class="delete-btn" aria-label="Delete Task"></button>
         </li> -->
       </ul>
+
       <button class="clear-tasks-btn btn" type="button">Clear Tasks</button>
+    
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
