--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <form class="task-form">
         <input class="task-input" type="text" id="userinput" placeholder="Enter task">
         <button class="input-btn btn" type="submit">Add Task</button>
+        <span class="task-input-tips"></span>
       </form>
 
       <div class="filter-wrapper">
