UX for input label

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <h1 class="page-header">Easily Manage Your Tasks!</h1>
 
       <form class="task-form">
-        <input class="task-input" type="text" id="userinput" placeholder="Enter task">
-        <button class="input-btn btn" type="submit">Add Task</button>
+        <input class="task-input" type="text" id="userinput">
+        <label class="task-input-label" for="userinput">Enter task</label>
+        <button class="input-btn btn" type="submit" >Add Task</button>
         <span class="task-input-tips"></span>
       </form>
 
