--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
       <h1 class="page-header">Easily Manage Your Tasks!</h1>
       <form class="task-form">
         <input class="task-input" type="text" id="userinput">
-        <label class="task-input-label" for="userinput">Enter task</label>
-        <button class="input-btn btn" type="submit" >Add Task</button>
-        <span class="task-input-tips"></span>
+        <label class="task-label" for="userinput">Enter task</label>
+        <button class="input-btn btn" type="submit">Add Task</button>
+        <span class="task-validation"></span>
       </form>
       <div class="filter-wrapper">
         <input class="filter-tasks" type="text" name="filter" id="filter" placeholder="Filter tasks">
         <button class="clear-filter-btn" type="button">Clear</button>
       </div>
-      <ul class="task-list">
-        <!-- <li class="task-list-item">
-          <span class="task-content">Notebook</span>
-          <button class="delete-btn" aria-label="Delete Task"></button>
-        </li> -->
-      </ul>
+      <ul class="task-list"></ul>
       <button class="clear-tasks-btn btn" type="button">Clear Tasks</button>
     </div>
+    
+    <!-- TASK LIST ITEM TEMPLATE -->
+    <template id="task-item">
+      <li class="task-item">
+        <span class="task-content">Task</span>
+        <button class="delete-btn" aria-label="Delete Task"></button>
+      </li>
+    </template>
+
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
