--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="wrapper">
       <h1 class="page-header">Easily Manage Your Tasks!</h1>
+
       <!-- ADD NEW TASK FORM -->
       <form class="task-form">
         <input class="task-input" type="text" id="userinput">
@@ -17,14 +18,26 @@
         <button class="input-btn btn" type="submit">Add Task</button>
         <span class="task-validation"></span>
       </form>
-      <!-- FILTER CURRENT TASKS -->
-      <div class="filter-wrapper">
-        <input class="filter-tasks" type="text" name="filter" id="filter" placeholder="Filter tasks">
-        <button class="clear-filter-btn" type="button">Clear</button>
-      </div>
-      <!-- CURRENT TASKS LIST -->
-      <ul class="task-list"></ul>
-      <button class="clear-tasks-btn btn" type="button">Clear Tasks</button>
+
+      <!-- CURRENT TASKS SECTION -->
+      <section class="active-tasks">
+        <h2 class="visually-hidden">Your curren tasks</h2>
+        <div class="filter-wrapper">
+          <input class="filter-tasks" type="text" name="filter" id="filter" placeholder="Filter your tasks">
+          <button class="clear-filter-btn" type="button">Clear</button>
+        </div>
+        <ul class="task-list"></ul>
+        <button class="clear-tasks-btn btn" type="button">Clear Tasks</button>
+      </section>
+
+      <!-- DONE TASKS SECTION -->
+      <section class="done-tasks">
+        <div class="done-header-wrapper">
+          <h2 class="done-header">Archive (<span class="js-done-tasks">0</span>)</h2>
+          <button class="toggle-done-btn" type="button">hide</button>
+        </div>
+        <ul class="done-task-list"></ul>
+      </section>
     </div>
     
     <!-- TASK LIST ITEM TEMPLATE -->
