small form validation change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- ADD NEW TASK FORM -->
       <form class="task-form">
-        <input class="task-input" type="text" id="userinput" placeholder="">
+        <input class="task-input" type="text" id="userinput" placeholder="" required>
         <label class="task-label" for="userinput">Enter task</label>
         <button class="input-btn btn" type="submit">Add Task</button>
         <span class="task-validation"></span>
